photos gap fix

--- a/src/pages/portfolio-pages/Photography.module.scss
+++ b/src/pages/portfolio-pages/Photography.module.scss
@@ -13,7 +13,6 @@
   background-color: $color-black;
 
   @media (max-width: $break-phone) {
-    gap: $grid-gap-small;
     grid-template-columns: 1fr;
     grid-auto-rows: 10rem;
   }
